--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Loja de itens</string>
+    <string name="cadastrar">Cadastrar</string>
     <string name="nome">Nome</string>
+    <string name="email">Email</string>
     <string name="login">login</string>
      <string name="senha">Senha</string>
+    <string name="entrar">Entrar</string>
     <string name="login_erro">Login Incorreto</string>
     <string name="senha_erro">Senha Incorreto</string>
      <string name="confirmarSenha">ConfimarSenha</string>
